# ardd-data-warehouse

./: .env.example  .gitignore  README.md  compose.sh  dlt.sh  pyproject.toml  sqlmesh.sh
dbeaver/: .project
dbeaver/.dbeaver/: credentials-config.json  data-sources.json  project-metadata.json  project-settings.json
dbeaver/Scripts/: Script.sql  data-exploration.sql  fatalities-eda.sql
dlt_project/: filesystem_pipeline.py  load_excel_source.py  utils.py
dlt_project/.dlt/: config.toml  secrets.toml
docker/: compose-metabase.yaml  compose.yaml
docs/geojson/: LGA_2021_AUST_GDA94.json  SA4_2021_AUST_GDA2020.json  STE_2021_AUST_GDA2020.json
sources/: CG_LGA_2020_LGA_2021.csv  CG_RA_2016_RA_2021_GRID16.csv  RA_2021_AUST.xlsx
sqlmesh_project/: config.yaml
sqlmesh_project/models/gold/: dim_crash_details.sql  dim_locations.sql  dim_person.sql  dim_time_periods.sql  dim_times.sql  dim_vehicle_involvements.sql  dim_victims.sql  fact_crashes.sql  fact_fatalities.sql
sqlmesh_project/models/silver/: crashes.sql  fatalities.sql
