[project]
name = "data-warehouse"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dlt[postgres]>=1.16.0",
    "openpyxl>=3.1.5",
    "pandas>=2.3.2",
    "sqlmesh[postgres]>=0.216.0",
]

[dependency-groups]
dev = [
    "pandas-stubs>=2.3.2.250827",
    "psycopg2-binary>=2.9.10",
]

[tool.pyright]
typeCheckingMode = "standard"
